--- a/src/main/resources/pt/ipp/isep/dei/esoft/project/ui/gui/gsmMenu.fxml
+++ b/src/main/resources/pt/ipp/isep/dei/esoft/project/ui/gui/gsmMenu.fxml
@@ -10,11 +10,16 @@
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
-            <Label layoutX="43.0" layoutY="183.0" text="Green Spaces Manager Menu">
+            <Label layoutX="46.0" layoutY="181.0" text="Green Spaces Manager Menu" AnchorPane.bottomAnchor="181.0" AnchorPane.topAnchor="181.0">
                <font>
-                  <Font size="22.0" />
+                  <Font size="25.0" />
                </font>
             </Label>
+            <Button layoutX="311.0" layoutY="14.0" mnemonicParsing="false" onAction="#logout" text="Logout" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
          </children></AnchorPane>
   </items>
 </SplitPane>
