--- a/src/main/resources/pt/ipp/isep/dei/esoft/project/ui/gui/gsmMenu.fxml
+++ b/src/main/resources/pt/ipp/isep/dei/esoft/project/ui/gui/gsmMenu.fxml
@@ -5,12 +5,15 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<SplitPane dividerPositions="0.29797979797979796" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pt.ipp.isep.dei.esoft.project.ui.gui.GSMMenuUI">
+<SplitPane dividerPositions="0.3411371237458194" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pt.ipp.isep.dei.esoft.project.ui.gui.GSMMenuUI">
   <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
-            <Label layoutX="46.0" layoutY="181.0" text="Green Spaces Manager Menu" AnchorPane.bottomAnchor="181.0" AnchorPane.topAnchor="181.0">
+            <Button layoutX="49.0" layoutY="45.0" mnemonicParsing="false" onAction="#openRegisterGreenSpace" text="Register&#10;Green Space" textAlignment="CENTER" />
+         </children></AnchorPane>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="410.0">
+         <children>
+            <Label layoutX="110.0" layoutY="162.0" prefHeight="74.0" prefWidth="170.0" text="Green Spaces&#10;Manager Menu" textAlignment="CENTER" AnchorPane.bottomAnchor="162.0" AnchorPane.topAnchor="162.0">
                <font>
                   <Font size="25.0" />
                </font>
