--- a/src/main/resources/pt/ipp/isep/dei/esoft/project/ui/gui/gsmMenu.fxml
+++ b/src/main/resources/pt/ipp/isep/dei/esoft/project/ui/gui/gsmMenu.fxml
@@ -12,6 +12,7 @@
             <Button layoutX="49.0" layoutY="64.0" mnemonicParsing="false" onAction="#openRegisterGreenSpace" text="Register&#10;Green Space" textAlignment="CENTER" />
             <Button layoutX="42.0" layoutY="135.0" mnemonicParsing="false" onAction="#openAddEntryToDo" text="Add new entry&#10;to To-Do List" />
             <Button layoutX="42.0" layoutY="210.0" mnemonicParsing="false" onAction="#openAddEntryAgenda" text="Add new entry&#10;to Agenda" textAlignment="CENTER" />
+            <Button layoutX="38.0" layoutY="287.0" mnemonicParsing="false" onAction="#openAssignTeam" text="Assign Team to&#10;Agenda Entry" textAlignment="CENTER" />
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="410.0">
          <children>
